--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@iconify/vue": "^4.3.0",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.16",
         "@tailwindcss/vite": "^4.0.0",
+        "@types/three": "^0.136.0",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "daisyui": "^4.12.23",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
+        "sass-embedded": "^1.85.1",
         "tailwindcss": "^3.2.1",
         "vite": "^6.0.11",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@vueuse/core": "^12.8.2",
+        "animejs": "^3.2.2",
+        "three": "^0.136.0",
+        "vue-i18n": "^11.1.1"
     }
 }
