Refactor IndexWork component for improved performance and aesthetics
- Simplified background effect with fewer pulsing orbs and optimized animations.
- Enhanced carousel functionality with better touch and mouse event handling.
- Updated project filtering mechanism and removed unnecessary dropdown.
- Improved visibility management for carousel slides to enhance performance.
- Adjusted progress bar behavior for smoother updates.
- Streamlined CSS animations for hardware acceleration.

Update MobileTimelineItem component for cleaner code

- Refactored technology icons rendering for better readability.
- Cleaned up SVG structure for improved maintainability.

Revise LayoutHeader component for consistent styling

- Adjusted header styles for better responsiveness and visual consistency.

Update project JSON data for improved color palette

- Changed project background and foreground colors for better contrast and visibility.

--- a/resources/json/projects.json
+++ b/resources/json/projects.json
@@ -16,8 +16,8 @@
                     "dimensions": { "width": 350, "height": 450 },
                     "palette": {
                         "dominant": {
-                            "background": "#fff",
-                            "foreground": "#000"
+                          "background": "#111111",
+                            "foreground": "#ffffff"
                         }
                     }
                 }
@@ -63,8 +63,8 @@
                     "dimensions": { "width": 350, "height": 450 },
                     "palette": {
                         "dominant": {
-                            "background": "#fff",
-                            "foreground": "#000"
+                           "background": "#111111",
+                            "foreground": "#ffffff"
                         }
                     }
                 }
