--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@ssense/vue-carousel": "^0.6.5",
         "@vueuse/core": "^12.8.2",
         "animejs": "^3.2.2",
+        "motion-v": "^1.1.0-alpha.1",
         "three": "^0.136.0",
-        "vue-i18n": "^11.1.1"
+        "vue-carousel": "^0.18.0",
+        "vue-i18n": "^11.1.1",
+        "vue3-carousel": "^0.15.1"
     }
 }
